; ModuleID = '/home/carl/AnghaBench/ccv/lib/nnc/extr_ccv_cnnp_model_core.c__ccv_cnnp_cmd_exec_io_copy.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/nnc/extr_ccv_cnnp_model_core.c__ccv_cnnp_cmd_exec_io_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ccv_nnc_no_hint = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32 (i8*, i32, i32, i32, i32*, i32)*, i8*, i8*)* @_ccv_cnnp_cmd_exec_io_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_ccv_cnnp_cmd_exec_io_copy(i32 %0, i32 (i8*, i32, i32, i32, i32*, i32)* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32 (i8*, i32, i32, i32, i32*, i32)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 (i8*, i32, i32, i32, i32*, i32)* %1, i32 (i8*, i32, i32, i32, i32*, i32)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32 (i8*, i32, i32, i32, i32*, i32)*, i32 (i8*, i32, i32, i32, i32*, i32)** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 (...) @CMD_DATA_TRANSFER_FORWARD()
  %12 = load i32, i32* @ccv_nnc_no_hint, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to i32*
  %15 = load i32, i32* %5, align 4
  %16 = call i32 %9(i8* %10, i32 %11, i32 %12, i32 0, i32* %14, i32 %15)
  ret void
}

declare dso_local i32 @CMD_DATA_TRANSFER_FORWARD(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
